# FFX-Compatibility-Tool

./: COLLAPSIBLE_NAV_README.md  FOUNDATION_ICONS_VARIANTS_README.md  FfxTool.sln  GUI_README.md  LAYOUT_EMPTYSTATES_CHROME_README.md  LICENSE  MD3_EXPANSION_README.md  README.md  RESEARCH_NOTES.md  SCREENSHOT_FIXES_README.md  SPEC_FIXES_README.md  THEME_SETTINGS_README.md  UI_REDESIGN_README.md  cli.py  conftest.py  pyproject.toml  requirements-gui.txt  requirements.txt  run_gui.py
.github/workflows/: build.yml  test.yml
FfxTool.Core/: FfxTool.Core.csproj  Pipeline.cs  PluginLookup.cs  RiffNode.cs
FfxTool.Core.Tests/: FfxTool.Core.Tests.csproj  PipelineTests.cs  RiffTests.cs
FfxTool.Core.Tests/fixtures/: sample_1.ffx
FfxTool.Gui/: AppHeader.cs  ConvertTab.cs  FfxTool.Gui.csproj  ListerTab.cs  MainForm.cs  Md3ComponentsExtended.cs  Md3Controls.cs  Md3Dropdown.cs  Md3EmptyState.cs  Md3Fonts.cs  Md3Icons.cs  Md3TitleBar.cs  Md3Tokens.cs  NavRail.cs  NavRailPrefs.cs  PluginProfile.cs  ProfileTab.cs  Program.cs  SettingsTab.cs  ThemeManager.cs
data/: plugin_table.json
ffx_core/: pipeline.py  plugins.py  riff.py
ffx_gui/: __main__.py  profile_store.py  tab_convert.py  tab_lister.py  tab_profile.py
tests/: test_pipeline.py  test_riff.py
tests/fixtures/: .gitkeep
